--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     </section>
     <section class="area5"></section>
     <footer>
-        Criado com amor pela B7Web<br/>
-        Créditos do layout para Nicepage
+        Criado por Guilherme Silva<br/>
+        @2021
     </footer>
 </body>
 </html>
